--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,1 +1,7 @@
-<p>header works!</p>
+<nav class="navbar navbar-light bg-light">
+    <a routerLink='/home'>Inicio</a>&nbsp;&nbsp;&nbsp;
+    <a routerLink='/curso'>Cursos</a>&nbsp;&nbsp;&nbsp;
+    <a routerLink='/contactenos'>contactenos</a>&nbsp;&nbsp;&nbsp;
+    <a routerLink='/administrador'>administrador</a>&nbsp;&nbsp;&nbsp;
+    <a routerLink='/auth'>Login</a>&nbsp;&nbsp;&nbsp;
+</nav>
