Tercero: Container y Footer

--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,2 +1,51 @@
-<hr/>
-<p>Pie de Pagina</p>
+<br/>
+<br/>
+<br/><br/><br/><br/>
+<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+<footer class="section footer-classic context-dark bg-image" style="background: #2d3246;">
+    <div class="container">
+      <div class="row row-30">
+        <div class="col-md-4 col-xl-5">
+          <div class="pr-xl-4"><a class="brand" href="#">
+              
+            </a>
+            <p style="color: white;">Examen Final</p>
+            <!-- Rights-->
+            <p class="rights" style="color: white;"><span>©  </span><span class="copyright-year">2021</span><span> </span><span>. </span><span>Romero Olivares Jhony.</span></p>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <h5 style="color: white;">Contacts</h5>
+          <dl class="contact-list">
+            <dt style="color: white;">Address:</dt>
+            <dd style="color: white;">Trujillo Peru</dd>
+          </dl>
+          <dl class="contact-list">
+            <dt>email:</dt>
+            <dd><a href="mailto:#">jhonyandresr@gmail.com</a></dd>
+          </dl>
+          <dl class="contact-list">
+            <dt>phones:</dt>
+            <dd style="color: white;"><a href="tel:#">www.google.com</a> <span>or</span> <a href="tel:#">www.google.com</a>
+            </dd>
+          </dl>
+        </div>  
+        <div class="col-md-4 col-xl-3">
+          <h5 style="color: white;">Links</h5>
+          <ul class="nav-list">
+            <li><a href="#" style="color: white;" >About</a></li>
+            <li><a href="#" style="color: white;">Projects</a></li>
+            <li><a href="#" style="color: white;">Blog</a></li>
+            <li><a href="#" style="color: white;">Contacts</a></li>
+            <li><a href="#" style="color: white;">Pricing</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="row no-gutters social-container">
+      <div class="col"><a class="social-inner" href="#"><span class="icon mdi mdi-facebook"></span><span>Facebook</span></a></div>
+      <div class="col"><a class="social-inner" href="#"><span class="icon mdi mdi-instagram"></span><span>instagram</span></a></div>
+      <div class="col"><a class="social-inner" href="#"><span class="icon mdi mdi-twitter"></span><span>twitter</span></a></div>
+      <div class="col"><a class="social-inner" href="#"><span class="icon mdi mdi-youtube-play"></span><span>google</span></a></div>
+    </div>
+  </footer>
